<resources>
    <string name="app_name">ZeroFeetAway</string>
    <string name="no_location">Could not get location</string>
    <string name="location_updated_message">Location updated</string>

    <string name="latitude_label">Lat:</string>
    <string name="longitude_label">Lon:</string>
    <string name="last_update_label">Last update</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="search_button">Search</string>

    <string name="fetching_events_dialog">Fetching events&#8230;</string>
    <string name="loading_events_dialog">Loading events&#8230;</string>

    <string name="menu_start_search">Start search</string>
    <string name="menu_ar_view">AR View</string>
    <string name="menu_update_location">Update location</string>
    <string name="menu_location_poll_on">Turn on location auto-update</string>
    <string name="menu_location_poll_off">Turn off location auto-update</string>
</resources>
