<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/update_button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:gravity="center"
            android:text="@string/start_updates" />

        <Button
            android:id="@+id/stop_updates_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/stop_updates" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/latitude_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_button_bar">
        <TextView
            android:id="@+id/latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/latitude_label"
            android:textSize="@dimen/default_text_size" />
        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xsmall_margin"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/longitude_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude_bar">
        <TextView
            android:id="@+id/longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/longitude_label"
            android:textSize="@dimen/default_text_size" />
        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xsmall_margin"
            android:layout_marginStart="@dimen/xsmall_margin"
            android:textSize="@dimen/default_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/last_update_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_below="@+id/longitude_bar"
        android:textSize="@dimen/default_text_size" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_update_time_text"
        android:layout_above="@+id/search_button"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/search_button" />
</RelativeLayout>
